added highlighted code feature and numeric lines of code

--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -1,4 +1,4 @@
-@import "./Sass/mixins";
+@import "../Sass/mixins";
 
 * {
   margin: 0;
@@ -36,8 +36,6 @@ button {
   outline: none;
   border: none;
 }
-
-
 
 .container {
   width: 80%;
