--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -59,3 +59,13 @@ button {
     width: 95%;
   }
 }
+
+// Hooks styles
+
+.hook {
+  margin-top: 70px;
+}
+
+.hook:last-child {
+  margin-bottom: 70px;
+}
