changed font to Roboto

--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -9,7 +9,7 @@
 body {
   background-color: var(--background);
   color: var(--text);
-  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 :root {
