sidebar structure with its styles

--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -10,6 +10,7 @@ body {
   background-color: var(--background);
   color: var(--text);
   font-family: 'Roboto', sans-serif;
+  padding-left: 200px;
 }
 
 :root {
