--- a/src/Components/sidebar/SideBar.module.scss
+++ b/src/Components/sidebar/SideBar.module.scss
@@ -27,16 +27,16 @@
   flex-direction: column;
   gap: 14px;
 }
-
-.sidebar ul li {
+.sidebar ul li a {
+  text-decoration: none;
+  padding: 10px;
   background-color: #0e0e0e;
   color: var(--text);
   font-size: 1.1rem;
-  padding: 10px;
-  border-radius: 5px;
+  width: 100%;
   display: flex;
   justify-content: center;
-  cursor: pointer;
+  border-radius: 5px;
   transition: background-color .2s;
 
   &:hover {
@@ -44,17 +44,6 @@
   }
 
   &.active {
-    animation: .2s .4s 1 delayStyles forwards;
-  }
-}
-
-@keyframes delayStyles {
-  0% {
-    background-color: #0e0e0e;
-    color: var(--text);
-  }
-
-  100% {
     background-color: var(--text);
     color: var(--background);
   }
