designed the website, sorted styles

--- a/src/Components/hooks/HookCode.module.scss
+++ b/src/Components/hooks/HookCode.module.scss
@@ -1,7 +1,6 @@
 .code {
   display: flex;
   padding: 20px;
-  margin: 20px;
   font-size: 1.2rem;
   background-color: #0d1017;
   position: relative;
@@ -17,8 +16,8 @@
 
 .numbering {
   font-size: 1.1rem;
-  line-height: 1.275;
-  color: #464b56;
+  line-height: 1.279;
+  color: #5a606d;
   padding-right: 20px;
 }
 
