--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+:not(code)::selection {
+  background-color: #373b41;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -65,25 +69,32 @@ p {
   }
 }
 
-// Hook explanation
-.hook-paragraph {
-  margin: 0 0 60px;
-}
+.linkStyle1 {
+  text-decoration: none;
+  color: #2483ff;
+  position: relative;
+  transition: color .3s;
+  padding: 0 5px;
 
+  &:first-child {
+    padding-left: 0;
+  }
 
-// Hook Inputs/Outputs
-.inputs-outputs {
-  margin: 50px 0;
-}
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: calc(100% - 5px);
+    height: 0;
+    background-color: #2483ff;
+  }
 
-.inputs-outputs h3 {
-  margin-bottom: 20px;
-}
+  &:hover {
+    color: #398fff;
+  }
 
-.inputs-outputs>ul {
-  margin: 30px 0;
-}
-
-.inputs-outputs>ul>li {
-  margin: 6px 0;
+  &:hover::before {
+    height: 2px;
+  }
 }
