--- a/src/Components/home/hooks/HookCode.module.scss
+++ b/src/Components/home/hooks/HookCode.module.scss
@@ -1,9 +1,17 @@
 .code {
   display: flex;
-  padding: 20px;
   font-size: 1.2rem;
   background-color: #0d1017;
   position: relative;
+  border: solid 2px #0d1017;
+  border-radius: 10px;
+  width: 100%;
+  padding: 20px 0;
+  transition: border-color .2s;
+
+  &:hover {
+    border-color: #5c5e62;
+  }
 }
 
 .code:hover .copyButton {
@@ -16,21 +24,26 @@
 
 .numbering {
   font-size: 1.1rem;
-  line-height: 1.279;
+  line-height: 1.2742;
   color: #5a606d;
-  padding-right: 20px;
+  position: absolute;
+  left: 20px;
+  z-index: 1;
 }
 
 .languageJs {
-  padding: 0 !important;
   background-color: #0d1017 !important;
+  padding: 0 !important;
   width: 100%;
+  position: relative;
+  z-index: 0;
 }
 
 .languageJs>span {
   display: block;
   height: 22.4px;
   width: 100%;
+  padding-left: 60px;
   transition: background-color .05s;
 
   &:hover {
