--- a/src/Components/home/sidebar/SideBar.module.scss
+++ b/src/Components/home/sidebar/SideBar.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  padding: 50px 30px;
+  padding: 60px 30px 60px 70px;
   height: 100%;
   overflow-y: auto;
   user-select: none;
@@ -10,7 +10,7 @@
 
 .sidebar::-webkit-scrollbar {
   background-color: rgba(0, 0, 0, .186);
-  width: 6px;
+  width: 8px;
 }
 
 .sidebar::-webkit-scrollbar-thumb {
@@ -27,9 +27,10 @@
   flex-direction: column;
   gap: 14px;
 }
+
 .sidebar ul li a {
   text-decoration: none;
-  padding: 14px 10px;
+  padding: 12px 10px;
   background-color: #040404;
   color: var(--text);
   font-size: 1.1rem;
