--- a/src/Components/home/hooks/HookInputsOutputs.module.scss
+++ b/src/Components/home/hooks/HookInputsOutputs.module.scss
@@ -1,3 +1,5 @@
+@import "../../../Sass/mixins";
+
 .inputsOutputs {
   margin: 30px 0;
 }
@@ -5,6 +7,12 @@
 .inputsOutputs h3 {
   margin-bottom: 20px;
   font-size: 1.3rem;
+}
+
+@include medium {
+  .inputsOutputs h3 {
+    font-size: 1.2rem;
+  }
 }
 
 .inputsOutputs>ul {
@@ -15,4 +23,10 @@
   margin: 6px 0;
   font-size: 1.2rem;
   line-height: 1.4;
+}
+
+@include medium {
+  .inputsOutputs>ul>li {
+    font-size: 1rem;
+  }
 }
