--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -79,6 +79,7 @@ p {
   text-decoration: none;
   color: #2483ff;
   position: relative;
+  cursor: pointer;
   transition: color .3s;
   padding: 0 5px;
 
