--- a/src/Components/home/hooks/HookCode.module.scss
+++ b/src/Components/home/hooks/HookCode.module.scss
@@ -72,12 +72,12 @@
 
 @include medium {
   .code .buttons>button {
-    padding: 8px 10px;
+    padding: 6px 8px;
   }
 }
 
 .code .buttons>button>i {
-  font-size: 1rem;
+  font-size: .8rem;
   color: var(--text);
 }
 
