--- a/src/Components/home/hooks/HookExplanation.module.scss
+++ b/src/Components/home/hooks/HookExplanation.module.scss
@@ -8,6 +8,12 @@
   margin: 0 0 30px;
 }
 
+@include medium {
+  .hookParagraph {
+    font-size: .9rem;
+  }
+}
+
 .explanation>p + a {
   font-size: 1.2rem;
   padding-left: 0;
@@ -15,6 +21,6 @@
 
 @include medium {
   .explanation>p + a {
-    font-size: 1rem;
+    font-size: .9rem;
   }
 }
