--- a/src/Components/home/hooks/HookInputsOutputs.module.scss
+++ b/src/Components/home/hooks/HookInputsOutputs.module.scss
@@ -5,7 +5,7 @@
 }
 
 .inputsOutputs h3 {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-size: 1.3rem;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .inputsOutputs>ul {
-  margin: 30px 0;
+  margin-bottom: 30px;
 }
 
 .inputsOutputs>ul>li {
@@ -27,6 +27,6 @@
 
 @include medium {
   .inputsOutputs>ul>li {
-    font-size: 1rem;
+    font-size: .9rem;
   }
 }
