--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -18,10 +18,10 @@ body {
   background-color: var(--background);
   color: var(--text);
   font-family: 'Roboto', sans-serif;
-  padding-left: 340px;
+  padding-left: 292px;
 }
 
-@media (max-width: 1280px) {
+@include large {
   body {
     padding-left: 0;
   }
