padding 0 on sidebar extend

--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -19,6 +19,7 @@ body {
   color: var(--text);
   font-family: 'Roboto', sans-serif;
   padding-left: 292px;
+  transition: padding .5s ease-in-out;
 }
 
 @include large {
