--- a/src/Components/shared/FocusMode.module.scss
+++ b/src/Components/shared/FocusMode.module.scss
@@ -1,7 +1,7 @@
-.fullScreenButton {
+.focusModeButton {
   position: fixed;
   right: 15px;
-  top: 40px;
+  top: 90px;
   background-color: transparent;
   border: solid 2px var(--text);
   border-radius: 4px;
@@ -13,11 +13,26 @@
   }
 }
 
-.fullScreenButton>i {
+.focusModeButton.focusMode {
+  opacity: .2;
+  transition: opacity .2s;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
+.focusModeButton>i {
   font-size: 1rem;
   color: var(--text);
-  padding: 7px 8px;
+  padding: 7px 6px;
   cursor: pointer;
   transition: opacity 0.2s;
   z-index: 100;
 }
+
+.focusModeButton .eyeSlashIcon {
+  padding: 7.3px 6px;
+  font-size: .9rem;
+}
+
