capitalize folder names, optimization code, and simple touches

--- a/src/Components/shared/FocusMode.module.scss
+++ b/src/Components/shared/FocusMode.module.scss
@@ -6,7 +6,7 @@
   border: solid 2px var(--text);
   border-radius: 4px;
   opacity: .7;
-  transition: opacity 0.2s;
+  transition: opacity .2s;
 
   &:hover {
     opacity: 1;
@@ -27,7 +27,7 @@
   color: var(--text);
   padding: 7px 6px;
   cursor: pointer;
-  transition: opacity 0.2s;
+  transition: opacity .2s;
   z-index: 100;
 }
 
