--- a/src/Components/shared/FullScreenMode.module.scss
+++ b/src/Components/shared/FullScreenMode.module.scss
@@ -6,7 +6,7 @@
   border: solid 2px var(--text);
   border-radius: 4px;
   opacity: .7;
-  transition: opacity 0.2s;
+  transition: opacity .2s;
 
   &:hover {
     opacity: 1;
@@ -18,6 +18,6 @@
   color: var(--text);
   padding: 7px 8px;
   cursor: pointer;
-  transition: opacity 0.2s;
+  transition: opacity .2s;
   z-index: 100;
 }
