--- a/src/Components/shared/GlobalOverlay.module.scss
+++ b/src/Components/shared/GlobalOverlay.module.scss
@@ -7,7 +7,7 @@
   background-color: #0f172acc;
   filter: blur(4px);
   z-index: 99;
-  transition: opacity 0.2s ease-in-out;
+  transition: opacity .2s ease-in-out;
   opacity: 0;
   pointer-events: none;
 }
