--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -23,10 +23,15 @@
 .footer>p>a {
   color: var(--text);
   padding: 4px;
-  transition: opacity .2s;
+  transition: opacity .2s, color .2s;
   opacity: .7;
 
   &:hover {
     opacity: 1;
+  }
+
+  &:focus {
+    color: #0088ff;
+    outline: none;
   }
 }
