--- a/src/Components/Home/Sidebar/SideBar.module.scss
+++ b/src/Components/Home/Sidebar/SideBar.module.scss
@@ -33,20 +33,29 @@
   opacity: 0;
 }
 
-.sidebarIcon {
+.sidebarButton {
+  background-color: transparent;
   position: fixed;
   left: 10px;
   top: 30px;
-  font-size: 1.4rem;
-  color: var(--text);
   padding: 10px;
   cursor: pointer;
-  transition: opacity .2s;
   z-index: 100;
+  transition: opacity .2s;
 
   &:hover {
     opacity: .8;
   }
+
+  &:focus-visible {
+    outline: solid 2px orange;
+    border-radius: 6px;
+  }
+}
+
+.sidebarButton>i {
+  font-size: 1.4rem;
+  color: var(--text);
 }
 
 .sidebar {
@@ -77,6 +86,11 @@
 
   &.active:hover {
     opacity: .8;
+  }
+
+  &:focus-visible {
+    outline: solid 2px orange;
+    border-radius: 4px;
   }
 }
 
@@ -131,5 +145,9 @@
 
   &:hover {
     background-color: #70768f;
+  }
+
+  &:focus-visible {
+    outline: solid 2px #fff;
   }
 }
