--- a/src/Components/Shared/Features/FocusMode.module.scss
+++ b/src/Components/Shared/Features/FocusMode.module.scss
@@ -11,6 +11,10 @@
   &:hover {
     opacity: 1;
   }
+
+  &:focus-visible {
+    border-color: #2483ff;
+  }
 }
 
 .focusModeButton.focusMode {
@@ -22,13 +26,18 @@
   }
 }
 
+
 .focusModeButton>i {
   font-size: 1rem;
   color: var(--text);
   padding: 7px 6px;
   cursor: pointer;
-  transition: opacity .2s;
+  transition: opacity .2s, border-color .2s;
   z-index: 100;
+}
+
+.focusModeButton:focus-visible>i {
+  color: #2483ff;
 }
 
 .focusModeButton .eyeSlashIcon {
