--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -100,8 +100,16 @@ p {
     background-color: #2483ff;
   }
 
+  &:focus::before {
+    height: 2px;
+  }
+
   &:hover {
     color: #398fff;
+  }
+
+  &:focus {
+    outline: none;
   }
 
   &:hover::before {
