--- a/src/Components/Home/Hooks/HookCode.module.scss
+++ b/src/Components/Home/Hooks/HookCode.module.scss
@@ -103,7 +103,7 @@
 .numbering {
   font-size: 1.1rem;
   line-height: 1.2783;
-  color: #5a606d;
+  color: #7f8799;
   border-radius: inherit;
   padding: 0 20px;
   user-select: none;
