--- a/src/Components/Home/Sidebar/SideBar.module.scss
+++ b/src/Components/Home/Sidebar/SideBar.module.scss
@@ -56,7 +56,7 @@
 .sidebar {
   padding: 20px 60px 20px 30px;
   height: 100%;
-  overflow-y: auto;
+  overflow-y: scroll;
   position: relative;
   z-index: 102;
 }
