search input styles

--- a/src/Components/Home/Sidebar/SideBar.module.scss
+++ b/src/Components/Home/Sidebar/SideBar.module.scss
@@ -59,6 +59,9 @@
   overflow-y: scroll;
   position: relative;
   z-index: 102;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .sidebar.active {
